:sparkles: Added home page and styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+
     <title>Yassine Akesbi</title>
 </head>
 
 <body>
 
-    <h1>Hello, World! with ✨</h1>
+    <div class="header">
+        <div class="logo">
+            Yassine Akesbi
+        </div>
+        <ul class="nav">
+            <li>
+                <a href="#">Résumé</a>
+                <a href="#">Work</a>
+                <a href="#">Blog</a>
+            </li>
+        </ul>
+    </div>
+    <div class="hero">
+        <h1 class="main">I use both sides of my brain, <span class="serif">interchangeably</span> .</h1>
+        <p class="tagline">My name is Yassine. I'm a fullstack developer with skills in UI/UX design, from Agadir,
+            Morocco.</p>
+        <p class="contact">
+            Get in touch via <a class="btn"> email</a> or if you prefer these <a class="btn"><img
+                    src="img/facebook.svg"></a>
+            <a class="btn"><img src="img/instagram.svg" alt=""></a>
+            <a class="btn"><img src="img/linkedin.svg" alt=""></a> check out my <a href="" class="btn">blog</a> too.
+        </p>
+    </div>
+
+    <div class="skills">
+        <h3>What i can do</h3>
+        <ul>
+            <li class="skill">
+                <img src="img/code.svg" alt="code">
+                <p class="text-purple">Code</p>
+                <p>I can make web & mobile apps using various technologies, mainly,
+                    Symfony and Ionic.
+                </p>
+            </li>
+            <li class="skill">
+                <img src="img/design.svg" alt="design">
+                <p class="text-green">Design</p>
+                <p>I can make web & mobile apps using various technologies, mainly,
+                    Symfony and Ionic.
+                </p>
+            </li>
+            <li class="skill">
+                <img src="img/community.svg" alt="community management">
+                <p class="text-red">Community management</p>
+                <p>I can make web & mobile apps using various technologies, mainly,
+                    Symfony and Ionic.
+                </p>
+            </li>
+        </ul>
+    </div>
+    <div class="works">
+        <h3>What i'm working on</h3>
+        <ul>
+            <li class="work">
+                <img src="" alt="">
+                <p class="text-purple">Current</p>
+                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                </p>
+            </li>
+            <li class="work">
+                <img src="" alt="">
+                <p class="text-purple">Previous</p>
+                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                </p>
+            </li>
+            <li class="work">
+                <img src="" alt="">
+                <p class="text-purple">Education</p>
+                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                </p>
+            </li>
+        </ul>
+    </div>
+
+
 
 </body>
 
