--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <ul class="nav">
             <li>
-                <a href="#">Résumé</a>
+                <a href="#">Resume</a>
                 <a href="#">Work</a>
                 <a href="#">Blog</a>
             </li>
@@ -26,14 +26,23 @@
     </div>
     <div class="hero">
         <h1 class="main">I use both sides of my brain, <span class="serif">interchangeably</span> .</h1>
-        <p class="tagline">My name is Yassine. I'm a fullstack developer with skills in UI/UX design, from Agadir,
+        <p class="tagline">My name is Yassine. I'm a fullstack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
         <p class="contact">
-            Get in touch via <a class="btn"> email</a> or if you prefer these <a class="btn"><img
-                    src="img/facebook.svg"></a>
-            <a class="btn"><img src="img/instagram.svg" alt=""></a>
-            <a class="btn"><img src="img/linkedin.svg" alt=""></a> check out my <a href="" class="btn">blog</a> too.
+            Please get in touch via <a class="btn email"> email</a>
+
+            or if you prefer these
+            <a href="https://facebook.com/Yassakesbi" class="btn"><img src="img/facebook.svg"></a>
+            <a href="https://instagram.com/ysn.akesbi" class="btn"><img src="img/instagram.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/yassineakesbi" class="btn"><img src="img/linkedin.svg" alt=""></a>
+            check out my
+            <a href="" class="btn">blog</a> too.
+            <div class="popup">
+                <p>akesbiyassine@gmail.com</p>
+                <a href="mailto:akesbiyassine@gmail.com">Email me</a>
+            </div>
         </p>
+
     </div>
 
     <div class="skills">
@@ -41,23 +50,23 @@
         <ul>
             <li class="skill">
                 <img src="img/code.svg" alt="code">
-                <p class="text-purple">Code</p>
+                <p class="text-purple"><strong>Code</strong></p>
                 <p>I can make web & mobile apps using various technologies, mainly,
-                    Symfony and Ionic.
+                    Symfony 5 and Ionic.
                 </p>
             </li>
             <li class="skill">
                 <img src="img/design.svg" alt="design">
-                <p class="text-green">Design</p>
-                <p>I can make web & mobile apps using various technologies, mainly,
-                    Symfony and Ionic.
+                <p class="text-green"><strong>Design</strong></p>
+                <p>I can design products from scratch following a thourough UX process, and deliver pixel perfect
+                    designs.
                 </p>
             </li>
             <li class="skill">
                 <img src="img/community.svg" alt="community management">
-                <p class="text-red">Community management</p>
-                <p>I can make web & mobile apps using various technologies, mainly,
-                    Symfony and Ionic.
+                <p class="text-red"><strong>Community management</strong></p>
+                <p>I can manage your social media presence, create ad campagin strategies, create engaging content to
+                    keep for your audience.
                 </p>
             </li>
         </ul>
@@ -68,26 +77,73 @@
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Current</p>
-                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                <p>Working as a fullstack engineer, and maintaining the biggest educational website in Morocco at a
+                    startup company in Agadir, Morocco.
                 </p>
             </li>
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Previous</p>
-                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                <p>Worked as a fullstack developer at a french recruitment company building various products, mainly a
+                    mobile app for video resumes.
                 </p>
             </li>
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Education</p>
-                <p>Working as technical supervisor at a startup company in Agadir, Morocco.
+                <p>Graduated top of class and got my engineering degree with honors from the National School of Applied
+                    Sciences in
+                    Fez, Morocco.
                 </p>
             </li>
         </ul>
     </div>
 
+    <div class="footer">
+        <p>© Yassine Akesbi - made in Agadir, today is <span class="day"></span> with <span class="temp"></span> °
+        </p>
+    </div>
 
 
+    <script>
+        window.onload = () => {
+            fetch(
+                    `https://api.openweathermap.org/data/2.5/weather?q=Agadir&appid=5d7901792a965dcedc663c8bb663a219`
+                )
+                .then(function (resp) {
+                    console.log(resp);
+                })
+                .then(function (data) {
+                    console.log(data);
+                    document.querySelector(".temp").innerHTML = celcius + '&deg;';
+                })
+                .catch(function () {
+                    // catch any errors
+                });
+        }
+
+
+        let popup = document.querySelector(".popup");
+        let email = document.querySelector(".email");
+
+        popup.classList.add("hidden");
+
+        email.onclick = () => {
+            popup.classList.toggle("hidden");
+        };
+
+        document.onclick = () => {
+            var isClickInside = email.contains(event.target) || popup.contains(event.target);
+            if (!isClickInside) {
+                popup.classList.add("hidden");
+            }
+        };
+        var dateObj = new Date()
+        var day = dateObj.toLocaleString("default", {
+            weekday: "long"
+        })
+        document.querySelector(".day").innerHTML = day;
+    </script>
 </body>
 
 </html>
