--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="header">
         <div class="logo">
-            Yassine Akesbi
+            <img src="img/logo.svg" alt="">
         </div>
         <ul class="nav">
             <li>
@@ -25,16 +25,16 @@
         </ul>
     </div>
     <div class="hero">
-        <h1 class="main">I use both sides of my brain, <span class="serif">interchangeably</span> .</h1>
-        <p class="tagline">My name is Yassine. I'm a fullstack developer with skills in UI/UX design from Agadir,
+        <h1 class="main">Hi, i'm Yassine! 😄</h1>
+        <p class="tagline">I'm a fullstack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
         <p class="contact">
             Please get in touch via <a class="btn email"> email</a>
 
             or if you prefer these
-            <a href="https://facebook.com/Yassakesbi" class="btn"><img src="img/facebook.svg"></a>
-            <a href="https://instagram.com/ysn.akesbi" class="btn"><img src="img/instagram.svg" alt=""></a>
-            <a href="https://www.linkedin.com/in/yassineakesbi" class="btn"><img src="img/linkedin.svg" alt=""></a>
+            <a href="https://facebook.com/Yassakesbi" class="btn">facebook</a>
+            <a href="https://instagram.com/ysn.akesbi" class="btn">Instagram</a>
+            <a href="https://www.linkedin.com/in/yassineakesbi" class="btn">Linkedin</a>
             check out my
             <a href="" class="btn">blog</a> too.
             <div class="popup">
