--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
             <li class="skill">
                 <img src="img/code.svg" alt="code">
                 <p class="text-purple"><strong>Code</strong></p>
-                <p>I can make web & mobile apps using various technologies, mainly,
-                    Symfony 5 and Ionic.
+                <p>I can make web & mobile apps using various technologies, mainly, Symfony 5 and Ionic.
                 </p>
             </li>
             <li class="skill">
