--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <li class="skill">
                 <img src="img/community.svg" alt="community management">
                 <p class="text-red"><strong>Community management</strong></p>
-                <p>I can manage your social media presence, create ad campagin strategies, create engaging content to
-                    keep for your audience.
+                <p>Manage your social media presence, create ad campagin strategies and create engaging content for your
+                    audience.
                 </p>
             </li>
         </ul>
