--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <title>Hello, i'm Yassine! 😄</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,10 +14,29 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <meta name="title" content="Hello, i'm Yassine! 😄">
+    <meta name="description" content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yassineakesbi.com/">
+    <meta property="og:title" content="Hello, i'm Yassine! 😄">
+    <meta property="og:description"
+        content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
+    <meta property="og:image" content="img/thumb.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yassineakesbi.com/">
+    <meta property="twitter:title" content="Hello, i'm Yassine! 😄">
+    <meta property="twitter:description"
+        content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
+    <meta property="twitter:image" content="img/thumb.png">
+
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
-    <title>Yassine Akesbi</title>
 </head>
 
 <body>
@@ -34,7 +54,7 @@
         </ul>
     </div>
     <div class="hero">
-        <h1 class="main">Hi, i'm Yassine! 😄</h1>
+        <h1 class="main"><span id="typewriter">Hello</span>, i'm Yassine! 😄</h1>
         <p class="tagline">I'm a fullstack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
         <p class="contact">
@@ -114,9 +134,14 @@
 
 
     <script>
+        const instance = new Typewriter('#typewriter', {
+            strings: ['Hello', 'سلام', 'Salam', 'ⴰⵣⵓⵍ', , 'Salut'],
+            autoStart: true,
+            loop: true,
+        });
         window.onload = () => {
             fetch(
-                    `https://api.openweathermap.org/data/2.5/weather?q=Agadir&appid=5d7901792a965dcedc663c8bb663a219`
+                    `https://api.openweathermap.org/data/2.5/weather?q=Agadir,MA&appid=5d7901792a965dcedc663c8bb663a219`
                 )
                 .then(function (resp) {
                     console.log(resp);
@@ -129,7 +154,6 @@
                     // catch any errors
                 });
         }
-
 
         let popup = document.querySelector(".popup");
         let email = document.querySelector(".email");
