--- a/index.html
+++ b/index.html
@@ -80,21 +80,22 @@
             <li class="skill">
                 <img src="img/code.svg" alt="code">
                 <p class="text-purple"><strong>Code</strong></p>
-                <p>I can make web & mobile apps using various technologies, mainly, Symfony 5 and Ionic.
+                <p>Desing, code and deploy web & mobile apps using various technologies and frameworks, including
+                    Symfony 5 and Ionic.
                 </p>
             </li>
             <li class="skill">
                 <img src="img/design.svg" alt="design">
                 <p class="text-green"><strong>Design</strong></p>
-                <p>I can design products from scratch following a thourough UX process, and deliver pixel perfect
-                    designs.
+                <p>Design products, graphics, brands from scratch following a thorough UX process and deliver pixel
+                    perfect results.
                 </p>
             </li>
             <li class="skill">
                 <img src="img/community.svg" alt="community management">
                 <p class="text-red"><strong>Community management</strong></p>
                 <p>Manage your social media presence, create ad campagin strategies and create engaging content for your
-                    audience.
+                    audience (ad creatives, banners, videos..)
                 </p>
             </li>
         </ul>
@@ -105,7 +106,8 @@
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Current</p>
-                <p>Working as a fullstack engineer, and maintaining the biggest educational website in Morocco at a
+                <p>Working as a fullstack engineer, and maintaining the most visited educational <a
+                        href="https://9rayti.com">website</a> in Morocco at a
                     startup company in Agadir, Morocco.
                 </p>
             </li>
@@ -113,15 +115,14 @@
                 <img src="" alt="">
                 <p class="text-purple">Previous</p>
                 <p>Worked as a fullstack developer at a french recruitment company building various products, mainly a
-                    mobile app for video resumes.
+                    <a href="http://blog.cv.video/">mobile app</a> for video resumes.
                 </p>
             </li>
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Education</p>
                 <p>Graduated top of class and got my engineering degree with honors from the National School of Applied
-                    Sciences in
-                    Fez, Morocco.
+                    Sciences in Fez, Morocco.
                 </p>
             </li>
         </ul>
