--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <li class="skill">
                 <img src="img/code.svg" alt="code">
                 <p class="text-purple"><strong>Code</strong></p>
-                <p>Desing, code and deploy web & mobile apps using various technologies and frameworks, including
+                <p>Design, code and deploy web & mobile apps using various technologies and frameworks, including
                     Symfony 5 and Ionic.
                 </p>
             </li>
