--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li>
                 <a href="#">Resume</a>
                 <a href="#">Work</a>
-                <a href="#">Blog</a>
+                <a href="https://medium.com/@yassineakesbi">Blog</a>
             </li>
         </ul>
     </div>
@@ -57,20 +57,22 @@
         <h1 class="main"><span id="typewriter">Hello</span>, i'm Yassine! 😄</h1>
         <p class="tagline">I'm a fullstack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
-        <p class="contact">
-            Please get in touch via <a class="btn email"> email</a>
-
+        <div class="contact">
+            <div style="position: relative; display:inline-block">
+                Please get in touch via <a class="btn email"> email</a>
+                <div class="popup">
+                    <p>akesbiyassine@gmail.com</p>
+                    <a href="mailto:akesbiyassine@gmail.com">Email me</a>
+                </div>
+            </div>
             or if you prefer these
-            <a href="https://facebook.com/Yassakesbi" class="btn">facebook</a>
+            <a href="https://facebook.com/Yassakesbi" class="btn">Facebook</a>
             <a href="https://instagram.com/ysn.akesbi" class="btn">Instagram</a>
             <a href="https://www.linkedin.com/in/yassineakesbi" class="btn">Linkedin</a>
             check out my
-            <a href="" class="btn">blog</a> too.
-            <div class="popup">
-                <p>akesbiyassine@gmail.com</p>
-                <a href="mailto:akesbiyassine@gmail.com">Email me</a>
-            </div>
-        </p>
+            <a href="https://medium.com/@yassineakesbi" class="btn">blog</a> too.
+
+        </div>
 
     </div>
 
@@ -94,7 +96,8 @@
             <li class="skill">
                 <img src="img/community.svg" alt="community management">
                 <p class="text-red"><strong>Community management</strong></p>
-                <p>Manage your social media presence, create ad campagin strategies and create engaging content for your
+                <p>Manage your social media presence, create ad campagin strategies and create engaging content for
+                    your
                     audience (ad creatives, banners, videos..)
                 </p>
             </li>
@@ -114,14 +117,16 @@
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Previous</p>
-                <p>Worked as a fullstack developer at a french recruitment company building various products, mainly a
+                <p>Worked as a fullstack developer at a french recruitment company building various products, mainly
+                    a
                     <a href="http://blog.cv.video/">mobile app</a> for video resumes.
                 </p>
             </li>
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Education</p>
-                <p>Graduated top of class and got my engineering degree with honors from the National School of Applied
+                <p>Graduated top of class and got my engineering degree with honors from the National School of
+                    Applied
                     Sciences in Fez, Morocco.
                 </p>
             </li>
