--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     </div>
 
     <div class="skills">
-        <h3>What i can do</h3>
+        <h3>What I can do</h3>
         <ul>
             <li class="skill">
                 <img src="img/code.svg" alt="code">
                 <p class="text-purple"><strong>Code</strong></p>
-                <p>Design, code and deploy web & mobile apps using various technologies and frameworks, including
-                    Symfony 5 and Ionic.
+                <p>Plan, code and deploy web & mobile apps using various frontend and backend technologies and
+                    frameworks, including Symfony 5 and Ionic.
                 </p>
             </li>
             <li class="skill">
@@ -96,15 +96,14 @@
             <li class="skill">
                 <img src="img/community.svg" alt="community management">
                 <p class="text-red"><strong>Community management</strong></p>
-                <p>Manage your social media presence, create ad campagin strategies and create engaging content for
-                    your
-                    audience (ad creatives, banners, videos..)
+                <p>Manage your social media presence, create ad campaign strategies and post engaging content for
+                    your audience (ad creatives, banners, videos...)
                 </p>
             </li>
         </ul>
     </div>
     <div class="works">
-        <h3>What i'm working on</h3>
+        <h3>What I'm working on</h3>
         <ul>
             <li class="work">
                 <img src="" alt="">
