--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
     </div>
     <div class="hero">
-        <h1 class="main"><span id="typewriter">Hello</span>, i'm Yassine! 😄</h1>
+        <h1 class="main"><span id="typewriter">Hello</span>, i'm Yassine! 🤓</h1>
         <p class="tagline">I'm a fullstack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
         <div class="contact">
