--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
     <meta property="twitter:image" content="img/thumb.png">
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
 </head>
