--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <meta property="twitter:image" content="img/thumb.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
@@ -41,7 +42,7 @@
 
 </head>
 
-<body>
+<body class="animate__animated animate__fadeIn">
 
     <div class="header">
         <div class="logo">
