Changed title to something more professional

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Hello, i'm Yassine! 🤓</title>
+    <title>Yassine Akesbi - Fullstack developer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,13 +14,13 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="title" content="Hello, i'm Yassine! 🤓">
+    <meta name="title" content="Yassine Akesbi - Fullstack developer">
     <meta name="description" content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yassineakesbi.com/">
-    <meta property="og:title" content="Hello, i'm Yassine! 🤓">
+    <meta property="og:title" content="Yassine Akesbi - Fullstack developer">
     <meta property="og:description"
         content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
     <meta property="og:image" content="img/thumb.png">
@@ -28,7 +28,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yassineakesbi.com/">
-    <meta property="twitter:title" content="Hello, i'm Yassine! 🤓">
+    <meta property="twitter:title" content="Yassine Akesbi - Fullstack developer">
     <meta property="twitter:description"
         content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
     <meta property="twitter:image" content="img/thumb.png">
