added bio links

--- a/index.html
+++ b/index.html
@@ -141,8 +141,11 @@
         </p>
     </div>
 
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47761412-4"></script>
     <script>
+        //check referer if instagram
+
+
         const instance = new Typewriter('#typewriter', {
             strings: ['Hello', 'سلام', 'Salam', 'ⴰⵣⵓⵍ', , 'Salut'],
             autoStart: true,
@@ -164,10 +167,6 @@
                 popup.classList.add("hidden");
             }
         };
-    </script>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47761412-4"></script>
-    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -177,6 +176,8 @@
 
         gtag('config', 'UA-47761412-4');
     </script>
+
+
 
 </body>
 
