--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             or if you prefer these
             <a href="https://facebook.com/Yassakesbi" class="btn">Facebook</a>
-            <a href="https://instagram.com/ysn.akesbi" class="btn">Instagram</a>
+            <a href="https://instagram.com/yassineakesbi" class="btn">Instagram</a>
             <a href="https://www.linkedin.com/in/yassineakesbi" class="btn">Linkedin</a>
             check out my
             <a href="https://medium.com/@yassineakesbi" class="btn">blog</a> too.
