--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Yassine Akesbi - Fullstack developer</title>
+    <title>Yassine Akesbi - Full stack developer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,23 +14,23 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="title" content="Yassine Akesbi - Fullstack developer">
-    <meta name="description" content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco">
+    <meta name="title" content="Yassine Akesbi - Full stack developer">
+    <meta name="description" content="I'm a full stack developer with skills in UI/UX design from Agadir, Morocco">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yassineakesbi.com/">
-    <meta property="og:title" content="Yassine Akesbi - Fullstack developer">
+    <meta property="og:title" content="Yassine Akesbi - Full stack developer">
     <meta property="og:description"
-        content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
+        content="I'm a full stack developer with skills in UI/UX design from Agadir, Morocco.">
     <meta property="og:image" content="img/thumb.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yassineakesbi.com/">
-    <meta property="twitter:title" content="Yassine Akesbi - Fullstack developer">
+    <meta property="twitter:title" content="Yassine Akesbi - Full stack developer">
     <meta property="twitter:description"
-        content="I'm a fullstack developer with skills in UI/UX design from Agadir, Morocco.">
+        content="I'm a full stack developer with skills in UI/UX design from Agadir, Morocco.">
     <meta property="twitter:image" content="img/thumb.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
     </div>
     <div class="hero">
         <h1 class="main"><span id="typewriter">Hello</span>, i'm Yassine! 🤓</h1>
-        <p class="tagline">I'm a fullstack developer with skills in UI/UX design from Agadir,
+        <p class="tagline">I'm a full stack developer with skills in UI/UX design from Agadir,
             Morocco.</p>
         <div class="contact">
             <div style="position: relative; display:inline-block">
@@ -75,9 +75,7 @@
             <a href="https://www.linkedin.com/in/yassineakesbi" class="btn">Linkedin</a>
             check out my
             <a href="https://medium.com/@yassineakesbi" class="btn">blog</a> too.
-
         </div>
-
     </div>
 
     <div class="skills">
@@ -112,7 +110,7 @@
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Current</p>
-                <p>Working as a fullstack engineer, and maintaining the most visited educational <a
+                <p>Working as a full stack engineer, and maintaining the most visited educational <a
                         href="https://9rayti.com">website</a> in Morocco at a
                     startup company in Agadir, Morocco.
                 </p>
@@ -120,7 +118,7 @@
             <li class="work">
                 <img src="" alt="">
                 <p class="text-purple">Previous</p>
-                <p>Worked as a fullstack developer at a french recruitment company building various products, mainly
+                <p>Worked as a full stack developer at a french recruitment company building various products, mainly
                     a
                     <a href="http://blog.cv.video/">mobile app</a> for video resumes.
                 </p>
@@ -137,15 +135,12 @@
     </div>
 
     <div class="footer">
-        <p>© Yassine Akesbi - made with ❤️ in Agadir.</span>
+        <p>© Yassine Akesbi - made with ❤️ & emojis in Agadir.</span>
         </p>
     </div>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47761412-4"></script>
     <script>
-        //check referer if instagram
-
-
         const instance = new Typewriter('#typewriter', {
             strings: ['Hello', 'سلام', 'Salam', 'ⴰⵣⵓⵍ', , 'Salut'],
             autoStart: true,
@@ -176,8 +171,6 @@
 
         gtag('config', 'UA-47761412-4');
     </script>
-
-
 
 </body>
 
