--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <a href="https://facebook.com/Yassakesbi" class="btn">Facebook</a>
             <a href="https://instagram.com/yassineakesbi" class="btn">Instagram</a>
             <a href="https://www.linkedin.com/in/yassineakesbi" class="btn">Linkedin</a>
+            <a href="https://github.com/Yassakesbi" class="btn">Github</a>
             check out my
             <a href="https://medium.com/@yassineakesbi" class="btn">blog</a> too.
         </div>
